[package]
name = "ytstorage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
crossbeam = "0.8.2"
indicatif = "0.17.4"
inquire = "0.6.2"
itertools = "0.10.5"
opencv = "0.82.0"
reqwest = { version = "0.11.18", features = ["stream"] }
tokio = { version = "1.28.2", features = ["full"] }
youtube_dl = "0.8.1"
